<resources>
    <string name="app_name">GjDemo</string>
    <string name="menu1">管理</string>
    <string name="Menu2">GIS</string>
    <string name="menu3">农技信息</string>
    <string name="menu4">农业执法</string>
    <string name="menu5">我的</string>
    <string name="z_detail">描述：</string>
    <string name="z_user">执法人：</string>
    <string name="z_time">创建时间：</string>
    <string name="click_detail">查看详情</string>
    <string name="daohang1">井研县柑橘生产管理信息系统</string>
    <string name="gisxx">GIS信息</string>
    <string name="gly">管理员</string>
    <string name="title">柑橘安全生产技术体系的创建及推广</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trpgl">投入品管理</string>
    <string name="scgl">生产管理</string>
    <string name="ckgl">仓库管理</string>
    <string name="clgl">材料管理</string>
    <string name="rkgl">入库管理</string>
    <string name="ckgl1">出库管理</string>
    <string name="kcgl">库存管理</string>
    <string name="zzgl">种植管理</string>
    <string name="sfgl">施肥管理</string>
    <string name="czgl">采摘管理</string>
    <string name="csdgl">成熟度管理</string>
    <string name="xjcl">新建材料</string>
    <string name="ss">搜索</string>
    <string name="clmc">材料名称：</string>
    <string name="qsrclmc">请输入材料名称</string>
    <string name="jldw">计量单位：</string>
    <string name="syzt">使用状态：</string>
    <string name="queren">确认</string>
    <string name="cancel">取消</string>
    <string name="ms">描述：</string>
    <string name="fzr">负责人：</string>
    <string name="bgy">保管员：</string>
    <string name="edit">修改</string>
    <string name="commit">上传</string>
    <string name="ckmc">仓库名称：</string>
    <string name="ckdz">仓库地址：</string>
    <string name="ckfzr">仓库负责人：</string>
    <string name="ckbgy">仓库保管员：</string>
    <string name="xjck">新建仓库</string>
    <string name="xzck">选择仓库：</string>
    <string name="rkjl">入库记录</string>
    <string name="xjrk">新建入库</string>
    <string name="xzrkcl">选择入库材料：</string>
    <string name="rusj">入库时间：</string>
    <string name="cai_liao_dan_jia">材料单价：</string>
    <string name="cailiao_zongjia">材料总金额：</string>
    <string name="cailiao_caigouren">采购人：</string>
    <string name="cailiao_yanshouren">验收人：</string>
    <string name="cailiao_baozhiqi">材料保质期：</string>
    <string name="cl">材料：</string>
    <string name="dj">单价：</string>
    <string name="xzckcl">选择出库材料：</string>
    <string name="xinjianchuku">新建出库</string>
    <string name="zzdgl">种植管理</string>
    <string name="xinjianzzd">新建种植地</string>
    <string name="sfjl">施肥记录</string>
    <string name="xjsf">新建施肥</string>
</resources>