<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/firstFragment"
        android:enabled="true"
        android:icon="@drawable/guanli"
        android:title="@string/menu1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/secondFragment"
        android:enabled="true"
        android:icon="@drawable/gis"
        android:title="@string/Menu2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/thirdFragment"
        android:enabled="true"
        android:icon="@drawable/nongjixinxi"
        android:title="@string/menu3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fourthFragment"
        android:enabled="true"
        android:icon="@drawable/nongyezhifa"
        android:title="@string/menu4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/fifthFragment"
        android:enabled="true"
        android:icon="@drawable/wode"
        android:title="@string/menu5"
        app:showAsAction="ifRoom" />
</menu>