<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/firstFragment">
    <fragment
        android:id="@+id/firstFragment"
        android:name="com.thinker.gjdemo.fragment.FirstFragment"
        android:label="@string/daohang1"
        tools:layout="@layout/first_fragment">
        <action
            android:id="@+id/action_firstFragment_to_kcglFragment2"
            app:destination="@id/kcglFragment2"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <action
            android:id="@+id/action_firstFragment_to_clglFragment"
            app:destination="@id/clglFragment" />
        <action
            android:id="@+id/action_firstFragment_to_cangKuFragment"
            app:destination="@id/cangKuFragment" />
        <action
            android:id="@+id/action_firstFragment_to_chuKuFragment"
            app:destination="@id/chuKuFragment" />
        <action
            android:id="@+id/action_firstFragment_to_ruKuFragment"
            app:destination="@id/ruKuFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.thinker.gjdemo.fragment.SecondFragment"
        android:label="@string/Menu2"
        tools:layout="@layout/second_fragment" />
    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.thinker.gjdemo.fragment.ThirdFragment"
        android:label="@string/menu3"
        tools:layout="@layout/third_fragment" />
    <fragment
        android:id="@+id/fourthFragment"
        android:name="com.thinker.gjdemo.fragment.FourthFragment"
        android:label="@string/menu4"
        tools:layout="@layout/fourth_fragment" />
    <fragment
        android:id="@+id/fifthFragment"
        android:name="com.thinker.gjdemo.fragment.FifthFragment"
        android:label="@string/menu5"
        tools:layout="@layout/fifth_fragment" />
    <fragment
        android:id="@+id/kcglFragment2"
        android:name="com.thinker.gjdemo.fragment.KcglFragment"
        android:label="@string/kcgl"
        tools:layout="@layout/kcgl_fragment" />
    <fragment
        android:id="@+id/clglFragment"
        android:name="com.thinker.gjdemo.fragment.ClglFragment"
        android:label="@string/clgl"
        tools:layout="@layout/clgl_fragment" >
        <action
            android:id="@+id/action_clglFragment_to_caiLiaoTianJiaFragment"
            app:destination="@id/caiLiaoTianJiaFragment" />
    </fragment>
    <fragment
        android:id="@+id/caiLiaoTianJiaFragment"
        android:name="com.thinker.gjdemo.fragment.CaiLiaoTianJiaFragment"
        android:label="@string/xjcl"
        tools:layout="@layout/cai_liao_tian_jia_fragment" />
    <fragment
        android:id="@+id/cangKuFragment"
        android:name="com.thinker.gjdemo.fragment.CangKuFragment"
        android:label="@string/ckgl"
        tools:layout="@layout/cang_ku_fragment" >
        <action
            android:id="@+id/action_cangKuFragment_to_cangKuTianJiaFragment"
            app:destination="@id/cangKuTianJiaFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/cangKuTianJiaFragment"
        android:name="com.thinker.gjdemo.fragment.CangKuTianJiaFragment"
        android:label="@string/xjck"
        tools:layout="@layout/cang_ku_tian_jia_fragment" />
    <fragment
        android:id="@+id/chuKuFragment"
        android:name="com.thinker.gjdemo.fragment.ChuKuFragment"
        android:label="chu_ku_fragment"
        tools:layout="@layout/chu_ku_fragment" />
    <fragment
        android:id="@+id/ruKuFragment"
        android:name="com.thinker.gjdemo.fragment.RuKuFragment"
        android:label="@string/rkjl"
        tools:layout="@layout/ru_ku_fragment">
        <action
            android:id="@+id/action_ruKuFragment_to_xinJianRuKuFragment3"
            app:destination="@id/xinJianRuKuFragment3" />
    </fragment>
    <fragment
        android:id="@+id/xinJianRuKuFragment3"
        android:name="com.thinker.gjdemo.fragment.XinJianRuKuFragment"
        android:label="@string/xjrk"
        tools:layout="@layout/xjru_fragment" />
</navigation>