<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/xinjianruku"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.XinJianRuKuFragment">

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/shap_cancel"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/shap"
        android:text="@string/queren"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/spinner_border"
        android:dropDownWidth="match_parent"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/spinner_border"
        android:dropDownWidth="match_parent"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/xzck"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/xzrkcl"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/cai_liao_dan_jia"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/cailiao_zongjia"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber3" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/cailiao_baozhiqi"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber4"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber4" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/cailiao_yanshouren"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName5"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/cailiao_caigouren"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName6" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:text="@string/rusj"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="@dimen/connect_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>